--- a/.github/workflows/filekeeper.yml
+++ b/.github/workflows/filekeeper.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: filekeeper
 
 on:
@@ -20,22 +17,16 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Set up Go modules
+      run: |
+        go mod init github.com/ykargin/filekeeper
+        go mod tidy
+
     - name: Install dependencies
       run: go get -v gopkg.in/yaml.v3
 
-    - name: Verify dependencies
-      run: go mod verify
-
     - name: Build
-      run: go build -v -o filekeeper
-
-    - name: Format check
-      run: |
-        if [ "$(gofmt -d . | wc -l)" -gt 0 ]; then
-          echo "Code formatting issues found:"
-          gofmt -d .
-          exit 1
-        fi
+      run: go build -v -o filekeeper .
 
     - name: Upload binary
       uses: actions/upload-artifact@v4
