--- a/.github/workflows/filekeeper.yml
+++ b/.github/workflows/filekeeper.yml
@@ -21,6 +21,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Debug info
+      run: |
+        echo "GitHub ref: ${{ github.ref }}"
+        echo "GitHub event name: ${{ github.event_name }}"
+        echo "Is tag: ${{ startsWith(github.ref, 'refs/tags/') }}"
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
@@ -46,17 +52,26 @@ jobs:
   release:
     name: Create Release
     needs: build
-    if: startsWith(github.ref, 'refs/tags/')
+    # Уточняем условие, делаем его более явным
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Debug Release Info
+        run: |
+          echo "Creating release for tag: ${{ github.ref_name }}"
+          echo "Full ref: ${{ github.ref }}"
 
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: filekeeper-linux-amd64
           path: ./
+
+      - name: List files
+        run: ls -la ./
 
       - name: Make binary executable
         run: chmod +x ./filekeeper-linux-amd64
@@ -69,5 +84,6 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
+          tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
