--- a/.github/workflows/filekeeper.yml
+++ b/.github/workflows/filekeeper.yml
@@ -1,16 +1,48 @@
-# Updated workflow for tag releases
+# FileKeeper CI/CD Workflow
 name: filekeeper
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
     tags:
       - 'v*'
   pull_request:
     branches: [ "main" ]
 
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Set up Go modules
+      run: |
+        go mod init github.com/ykargin/filekeeper
+        go mod tidy
+
+    - name: Install dependencies
+      run: go get -v gopkg.in/yaml.v3
+
+    - name: Run tests
+      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.txt
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: false
+
   build:
+    name: Build
+    needs: test
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -41,6 +73,12 @@ jobs:
     - name: Install dependencies
       run: go get -v gopkg.in/yaml.v3
 
+    - name: Run linter
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: latest
+        args: --timeout=5m
+
     - name: Build
       run: go build -v -o ${{ matrix.artifact_name }} .
 
@@ -53,7 +91,7 @@ jobs:
   release:
     name: Create Release
     needs: build
-    # Уточняем условие, делаем его более явным
+    # We only create a release for tagged pushes
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
