--- a/.github/workflows/filekeeper.yml
+++ b/.github/workflows/filekeeper.yml
@@ -113,7 +113,8 @@ jobs:
         GOOS: linux
         GOARCH: ${{ matrix.goarch }}
         GOARM: ${{ matrix.goarm }}
-      run: go build -v -o ${{ matrix.artifact_name }} .
+        CGO_ENABLED: 0
+      run: go build -a -ldflags '-extldflags "-static"' -v -o ${{ matrix.artifact_name }} .
 
     - name: Upload binary
       uses: actions/upload-artifact@v4
